[tool.poetry]
name = "flask-project"
version = "0.1.0"
description = ""
authors = ["RDS <rds@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "2.2.2"
connexion = {version = "2.14.1", extras = ["swagger-ui"]}
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
